Fix more warnings in pom.xml